CRUD for product, using  API and view of management

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -6,8 +6,8 @@
 <section class="container py-5">
     <div class="row text-center pt-3">
         <div class="col-lg-6 m-auto">
-            <button type="button" class="btn btn-primary open-modal"
-                    data-toggle="modal" data-target="#productModal">
+            <button class="btn btn-primary open-modal" data-bs-target="#productModal"
+                    data-bs-toggle="modal" type="button">
                 Create new product
             </button>
             <table class="table">
@@ -28,11 +28,12 @@
                     <td><img alt="..." class="card-img-top" th:src="${product.ruta_imagen}">
                     </td>
                     <td>
-                        <button type="button" th:attr="idProduct=${product.id}" class="btn btn-primary open-modal"
-                                data-toggle="modal" data-target="#productModal">
+                        <button class="btn btn-primary open-modal" data-bs-target="#productModal" data-bs-toggle="modal"
+                                th:attr="idProduct=${product.id}" type="button">
                             edit
                         </button>
-                        <button type="button" th:attr="idProduct=${product.id}" class="btn btn-danger open-modal btnDeleteProduct">
+                        <button class="btn btn-danger open-modal btnDeleteProduct" th:attr="idProduct=${product.id}"
+                                type="button">
                             delete
                         </button>
                     </td>
@@ -42,61 +43,59 @@
 
         </div>
     </div>
-<!-- this is the modal-->
-    <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
+    <!-- this is the modal-->
+    <div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="productModal" role="dialog"
+         tabindex="-1">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Producto</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button aria-label="Close" class="close" data-bs-dismiss="modal" type="button">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-
                 <div class="modal-body">
-
-                    <form id="formProduct" action="#" method="post" th:action="@{/product/save}" th:object="${product}">
-                        <div class="form-group d-none" >
+                    <form action="#" id="formProduct" method="post">
+                        <div class="form-group d-none">
                             <label for="id">Id</label>
-                            <input th:field="*{id}" type="number" class="form-control" id="id"
-                                   placeholder="id">
+                            <input class="form-control" id="id" placeholder="id"
+                                   type="number">
                         </div>
                         <div class="form-group">
                             <label for="id_categoria">Categoria</label>
-                            <input th:field="*{id_categoria}" type="number" class="form-control" id="id_categoria"
-                                   placeholder="Categoria">
+                            <input class="form-control" id="id_categoria" placeholder="Categoria"
+                                   type="number">
                         </div>
                         <div class="form-group">
                             <label for="descripcion">Descripcion</label>
-                            <input th:field="*{descripcion}" type="text" class="form-control" id="descripcion"
-                                   placeholder="descripcion">
+                            <input class="form-control" id="descripcion" placeholder="descripcion"
+                                   type="text">
                         </div>
                         <div class="form-group">
                             <label for="detalle">Detalle</label>
-                            <input th:field="*{detalle}" type="text" class="form-control" id="detalle"
-                                   placeholder="Detalle">
+                            <input class="form-control" id="detalle" placeholder="Detalle"
+                                   type="text">
                         </div>
                         <div class="form-group">
                             <label for="precio">Precio</label>
-                            <input th:field="*{precio}" type="number" class="form-control" id="precio"
-                                   placeholder="Precio">
+                            <input class="form-control" id="precio" placeholder="Precio"
+                                   type="number">
                         </div>
                         <div class="form-group">
                             <label for="existencias">Excistencias</label>
-                            <input th:field="*{existencias}" type="number" class="form-control" id="existencias"
-                                   placeholder="Excistencias">
+                            <input class="form-control" id="existencias" placeholder="Excistencias"
+                                   type="number">
                         </div>
                         <div class="form-group">
                             <label for="ruta_imagen">URL Imagen</label>
-                            <input th:field="*{ruta_imagen}" type="text" class="form-control" id="ruta_imagen"
-                                   placeholder="URL Imagen">
+                            <input class="form-control" id="ruta_imagen" placeholder="URL Imagen"
+                                   type="text">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="saveProduct">Save changes
+                    <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
+                    <button class="btn btn-primary" data-bs-dismiss="modal" id="saveProduct" type="button">Save changes
                     </button>
                 </div>
             </div>
@@ -111,6 +110,7 @@
 <script th:inline="javascript">
     /*<![CDATA[*/
     products = /*[[${products}]]*/ 'default';
+    productDefault = /*[[${productDefault}]]*/ 'default';
     /*]]>*/
 </script>
 
