--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
             <div class="col-sm d-flex justify-content-center text-center">
-                <a th:href="@{/product}">
+                <a th:href="@{/category}">
                     <div class="backgrounds justify-content-center">
                         <h2>Categories</h2>
                         <img th:src="@{/icons/icons8-grocery-shelf-96.png}"
