--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -6,35 +6,30 @@
 <section class="container py-5">
     <div class="row text-center pt-3">
         <div class="col-lg-6 m-auto">
-            <button class="btn btn-primary open-modal" data-bs-target="#productModal"
+            <button class="btn btn-primary open-modal" data-bs-target="#Modal"
                     data-bs-toggle="modal" type="button">
-                Create new product
+                Create new category
             </button>
             <table class="table">
                 <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Categoría</th>
                     <th scope="col">Descripcion</th>
-                    <th scope="col">Precio</th>
                     <th scope="col">Imagen</th>
-                    <th scope="col">Acction</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="product : ${products}">
-                    <td><span th:text="${product.id}"></span></td>
-                    <td><span th:text="${product.category.getDescripcion()}"></span></td>
-                    <td><span th:text="${product.descripcion}"> </span></td>
-                    <td><span th:text="${product.precio}"> </span></td>
-                    <td><img alt="..." class="card-img-top" th:src="${product.ruta_imagen}">
+                <tr th:each="category : ${categories}">
+                    <td><span th:text="${category.id}"></span></td>
+                    <td><span th:text="${category.descripcion}"> </span></td>
+                    <td><img alt="..." class="card-img-top" th:src="${category.ruta_imagen}">
                     </td>
                     <td>
-                        <button class="btn btn-primary open-modal" data-bs-target="#productModal" data-bs-toggle="modal"
-                                th:attr="idProduct=${product.id}" type="button">
+                        <button class="btn btn-primary open-modal" data-bs-target="#Modal" data-bs-toggle="modal"
+                                th:attr="idCategory=${category.id}" type="button">
                             edit
                         </button>
-                        <button class="btn btn-danger open-modal btnDeleteEntity" th:attr="idProduct=${product.id}"
+                        <button class="btn btn-danger open-modal btnDeleteEntity" th:attr="idCategory=${category.id}"
                                 type="button">
                             delete
                         </button>
@@ -46,49 +41,27 @@
         </div>
     </div>
     <!-- this is the modal-->
-    <div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="productModal" role="dialog"
+    <div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="Modal" role="dialog"
          tabindex="-1">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Producto</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Categoría</h5>
                     <button aria-label="Close" class="close" data-bs-dismiss="modal" type="button">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form action="#" id="formProduct" method="post">
+                    <form action="#" id="formProduct">
                         <div class="form-group d-none">
                             <label for="id">Id</label>
                             <input class="form-control" id="id" placeholder="id"
                                    type="number">
                         </div>
                         <div class="form-group">
-                            <label for="category-id">Categoria</label>
-                            <select class="form-control" id="category-id">
-                                <option th:each="category : ${categories}" th:text="${category.getDescripcion()}"
-                                        th:value="${category.getId()}"></option>
-                            </select>
-                        </div>
-                        <div class="form-group">
                             <label for="descripcion">Descripcion</label>
                             <input class="form-control" id="descripcion" placeholder="descripcion"
                                    type="text">
-                        </div>
-                        <div class="form-group">
-                            <label for="detalle">Detalle</label>
-                            <input class="form-control" id="detalle" placeholder="Detalle"
-                                   type="text">
-                        </div>
-                        <div class="form-group">
-                            <label for="precio">Precio</label>
-                            <input class="form-control" id="precio" placeholder="Precio"
-                                   type="number">
-                        </div>
-                        <div class="form-group">
-                            <label for="existencias">Excistencias</label>
-                            <input class="form-control" id="existencias" placeholder="Excistencias"
-                                   type="number">
                         </div>
                         <div class="form-group">
                             <label for="ruta_imagen">URL Imagen</label>
@@ -113,12 +86,12 @@
 <!-- This section is really important cause we are asssigning the list of products loaded in the model, into the js -->
 <script th:inline="javascript">
     /*<![CDATA[*/
-    products = /*[[${products}]]*/ 'default';
-    productDefault = /*[[${productDefault}]]*/ 'default';
+    categories = /*[[${categories}]]*/ 'default';
+    categoryDefault = /*[[${categoryDefault}]]*/ 'default';
     /*]]>*/
 </script>
 
-<script src="../js/views/product.js"></script>
+<script src="../js/views/category.js"></script>
 <script src="../js/views/baseCRUD.js"></script>
 </body>
 </html>
