--- a/src/main/resources/templates/log.html
+++ b/src/main/resources/templates/log.html
@@ -1,39 +1,61 @@
 <!DOCTYPE html>
-<html th:attr="lang=${lang}" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html th:attr="lang=${lang}" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head th:insert="~{template.html :: head}"></head>
 <body>
 <div th:insert="~{template.html :: nav}"></div>
-<div class="container my-5">
-    <div class="row align-items-center">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-success"><h2>[[#{login.login}]]</h2></div>
-                <div class="card-body">
-                    <form method="POST" th:action="@{/login}">
-                        <div class="form-group row my-3">
-                            <label class="col-md-5 my-auto" for="username"><i class="fas fa-user-lock"></i>[[#{login.username}]]:</label>
-                            <div class="col-md-7 my-auto">
-                                <input class="form-control" id="username" name="username" type="text"/></div>
-                        </div>
-                        <div class="form-group row my-3">
-                            <label class="col-md-5 my-auto" for="password"><i class="fas fa-key"></i>[[#{login.password}]]</label>
-                            <div class="col-md-7 my-auto"><input class="form-control" id="password" name="password"
-                                                                 type="password"/></div>
-                        </div>
-                        <div class="card-footer col text-center">
-                            <button class="btn btn-success" type="submit">
-                                        <span class="btn"><i class="fas fa-sign-in-alt"></i>
-                                            [[#{login.login}]]</span></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div th:if="${param.error != null}">
-                <h3>[[#{error.login}]]</h3>
-            </div>
+    <title>Login Page</title>
+    <!-- Link to your CSS files or add inline styles here -->
+    <style>
+        /* Styling for the green background */
+        body {
+            background-color: green;
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Center the login form vertically and horizontally */
+        .login-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        /* Styling for the light blue square */
+        .input-group {
+            background-color: lightblue;
+            padding: 20px;
+            border-radius: 8px;
+            margin: 10px;
+        }
+
+        /* Styling for the login button */
+        .login-btn {
+            background-color: #3498db;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <!-- Include the template.html content here -->
+    <div class="login-container">
+        <div class="input-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" />
         </div>
+
+        <div class="input-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" />
+        </div>
+
+        <button class="login-btn">Login</button>
     </div>
-</div>
 </body>
 </html>
