--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,138 +1,138 @@
-<!DOCTYPE html>
-<html th:attr="lang=${lang}" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="~{template.html :: head}"></head>
-<body>
-<div th:insert="~{template.html :: nav}"></div>
-<section class="container py-5">
-    <form>  
-        <div class="form-group">
-            <label for="inputLowerPrice">Lower price</label>
-            <input aria-describedby="lowerPrice" class="form-control" id="inputLowerPrice"
-                   placeholder="Lower price to search"
-                   type="number">
-        </div>
-        <div class="form-group">
-            <label for="inputHigherPrice">Higher price</label>
-            <input aria-describedby="higherPrice" class="form-control" id="inputHigherPrice"
-                   placeholder="Higher price to search"
-                   type="number">
-        </div>
-        <a class="btn btn-primary" href="#" id="btnSearch">Search</a>
-    </form>
-    <button class="btn btn-primary open-modal" data-bs-target="#productModal"
-            data-bs-toggle="modal" type="button">
-        Create new product
-    </button>
-    <div class="row text-center pt-3">
-        <div class="col-lg-6 m-auto">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Categoría</th>
-                    <th scope="col">Descripcion</th>
-                    <th scope="col">Precio</th>
-                    <th scope="col">Imagen</th>
-                    <th scope="col">Acction</th>
-                </tr>
-                </thead>
-                <tbody>
-                <!-- this comes from the model that is in product controller-->
-                <tr th:each="product : ${products}">
-                    <td><span th:text="${product.id}"></span></td>
-                    <td><span th:text="${product.category.getDescripcion()}"></span></td>
-                    <td><span th:text="${product.descripcion}"> </span></td>
-                    <td><span th:text="${product.precio}"> </span></td>
-                    <td><img alt="..." class="card-img-top" th:src="${product.ruta_imagen}">
-                    </td>
-                    <td>
-                        <button class="btn btn-primary open-modal" data-bs-target="#productModal" data-bs-toggle="modal"
-                                th:attr="idProduct=${product.id}" type="button">
-                            edit
-                        </button>
-                        <button class="btn btn-danger open-modal btnDeleteEntity" th:attr="idProduct=${product.id}"
-                                type="button">
-                            delete
-                        </button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <!-- this is the modal-->
-    <div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="productModal" role="dialog"
-         tabindex="-1">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Producto</h5>
-                    <button aria-label="Close" class="close" data-bs-dismiss="modal" type="button">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+<!DOCTYPE html><!-- agregamos spring security -->
+<html th:attr="lang=${lang}" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+    <head th:insert="~{template.html :: head}"></head>
+    <body>
+        <div th:insert="~{template.html :: nav}"></div>
+        <section class="container py-5">
+            <form>  
+                <div class="form-group">
+                    <label for="inputLowerPrice">Lower price</label>
+                    <input aria-describedby="lowerPrice" class="form-control" id="inputLowerPrice"
+                           placeholder="Lower price to search"
+                           type="number">
                 </div>
-                <div class="modal-body">
-                    <form action="#" id="formProduct" method="post">
-                        <div class="form-group d-none">
-                            <label for="id">Id</label>
-                            <input class="form-control" id="id" placeholder="id"
-                                   type="number">
-                        </div>
-                        <div class="form-group">
-                            <label for="category-id">Categoria</label>
-                            <select class="form-control" id="category-id">
-                                <!-- here thymeleaf is iterating over the categories to add options inside the dropdown-->
-                                <option th:each="category : ${categories}" th:text="${category.getDescripcion()}"
-                                        th:value="${category.getId()}"></option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="descripcion">Descripcion</label>
-                            <input class="form-control" id="descripcion" placeholder="descripcion"
-                                   type="text">
-                        </div>
-                        <div class="form-group">
-                            <label for="detalle">Detalle</label>
-                            <input class="form-control" id="detalle" placeholder="Detalle"
-                                   type="text">
-                        </div>
-                        <div class="form-group">
-                            <label for="precio">Precio</label>
-                            <input class="form-control" id="precio" placeholder="Precio"
-                                   type="number">
-                        </div>
-                        <div class="form-group">
-                            <label for="existencias">Excistencias</label>
-                            <input class="form-control" id="existencias" placeholder="Excistencias"
-                                   type="number">
-                        </div>
-                        <div class="form-group">
-                            <label for="ruta_imagen">URL Imagen</label>
-                            <input class="form-control" id="ruta_imagen" placeholder="URL Imagen"
-                                   type="text">
-                        </div>
-                    </form>
+                <div class="form-group">
+                    <label for="inputHigherPrice">Higher price</label>
+                    <input aria-describedby="higherPrice" class="form-control" id="inputHigherPrice"
+                           placeholder="Higher price to search"
+                           type="number">
                 </div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
-                    <button class="btn btn-primary" data-bs-dismiss="modal" id="saveEntity" type="button">Save changes
-                    </button>
+                <a class="btn btn-primary" href="#" id="btnSearch">Search</a>
+            </form>
+            <button class="btn btn-primary open-modal" data-bs-target="#productModal"
+                    data-bs-toggle="modal" type="button">
+                Create new product
+            </button>
+            <div class="row text-center pt-3">
+                <div class="col-lg-6 m-auto">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Categoría</th>
+                                <th scope="col">Descripcion</th>
+                                <th scope="col">Precio</th>
+                                <th scope="col">Imagen</th>
+                                <th scope="col">Acction</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- this comes from the model that is in product controller-->
+                            <tr th:each="product : ${products}">
+                                <td><span th:text="${product.id}"></span></td>
+                                <td><span th:text="${product.category.getDescripcion()}"></span></td>
+                                <td><span th:text="${product.descripcion}"> </span></td>
+                                <td><span th:text="${product.precio}"> </span></td>
+                                <td><img alt="..." class="card-img-top" th:src="${product.ruta_imagen}">
+                                </td>
+                                <td>
+                                    <button class="btn btn-primary open-modal" data-bs-target="#productModal" data-bs-toggle="modal"
+                                            th:attr="idProduct=${product.id}" type="button">
+                                        edit
+                                    </button>
+                                    <button class="btn btn-danger open-modal btnDeleteEntity" th:attr="idProduct=${product.id}"
+                                            type="button">
+                                        delete
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<div th:insert="~{template.html :: footer}"></div>
-<div th:insert="~{template.html :: scripts}"></div>
-<!-- This section is really important cause we are asssigning the list of products loaded in the model, into the js -->
-<script th:inline="javascript">
-    /*<![CDATA[*/
-    products = /*[[${products}]]*/ 'default';
-    productDefault = /*[[${productDefault}]]*/ 'default';
-    /*]]>*/
-</script>
-<script src="../js/views/product.js"></script>
-<script src="../js/views/baseCRUD.js"></script>
-</body>
+            <!-- this is the modal-->
+            <div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="productModal" role="dialog"
+                 tabindex="-1">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Producto</h5>
+                            <button aria-label="Close" class="close" data-bs-dismiss="modal" type="button">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="#" id="formProduct" method="post">
+                                <div class="form-group d-none">
+                                    <label for="id">Id</label>
+                                    <input class="form-control" id="id" placeholder="id"
+                                           type="number">
+                                </div>
+                                <div class="form-group">
+                                    <label for="category-id">Categoria</label>
+                                    <select class="form-control" id="category-id">
+                                        <!-- here thymeleaf is iterating over the categories to add options inside the dropdown-->
+                                        <option th:each="category : ${categories}" th:text="${category.getDescripcion()}"
+                                                th:value="${category.getId()}"></option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="descripcion">Descripcion</label>
+                                    <input class="form-control" id="descripcion" placeholder="descripcion"
+                                           type="text">
+                                </div>
+                                <div class="form-group">
+                                    <label for="detalle">Detalle</label>
+                                    <input class="form-control" id="detalle" placeholder="Detalle"
+                                           type="text">
+                                </div>
+                                <div class="form-group">
+                                    <label for="precio">Precio</label>
+                                    <input class="form-control" id="precio" placeholder="Precio"
+                                           type="number">
+                                </div>
+                                <div class="form-group">
+                                    <label for="existencias">Excistencias</label>
+                                    <input class="form-control" id="existencias" placeholder="Excistencias"
+                                           type="number">
+                                </div>
+                                <div class="form-group">
+                                    <label for="ruta_imagen">URL Imagen</label>
+                                    <input class="form-control" id="ruta_imagen" placeholder="URL Imagen"
+                                           type="text">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
+                            <button class="btn btn-primary" data-bs-dismiss="modal" id="saveEntity" type="button">Save changes
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div th:insert="~{template.html :: footer}"></div>
+        <div th:insert="~{template.html :: scripts}"></div>
+        <!-- This section is really important cause we are asssigning the list of products loaded in the model, into the js -->
+        <script th:inline="javascript">
+            /*<![CDATA[*/
+            products = /*[[${products}]]*/ 'default';
+            productDefault = /*[[${productDefault}]]*/ 'default';
+            /*]]>*/
+        </script>
+        <script src="../js/views/product.js"></script>
+        <script src="../js/views/baseCRUD.js"></script>
+    </body>
 </html>
 
